fix text overflow in getting-started modal

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1989,11 +1989,13 @@ textarea:-moz-ui-invalid {
   font-weight: bold;
   font-size: 1.25rem;
   margin-bottom: 5px;
+  white-space: pre-wrap;
 }
 
 .getting-started .content {
   font-size: 1rem;
   margin-bottom: 25px;
+  white-space: pre-wrap;
 }
 
 .getting-started .modal-dialog {
@@ -2005,7 +2007,6 @@ textarea:-moz-ui-invalid {
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.4);
   color: var(--dark);
   padding: 30px;
-  max-width: 370px;
 }
 
 .getting-started .text-right span {
